--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -127,7 +127,7 @@
     </section>
 
 
-    <div class="" style="background-color: #fff;">
+    <div class="" style="background-color: rgb(0, 0, 0);">
         <div class="footer_social">
             <div>
                 <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
