--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,6 +8,9 @@
                     <img src="/assest/OLIVE/woman.png" />
                 </div>
                 <div class="swiper-slide">
+                    <img height="452px" width="100%" src="/assest/OLIVE/model2.jpeg" />
+                </div>
+                <div class="swiper-slide">
                     <img src="/assest/OLIVE/ankara.png" />
                 </div>
                 <div class="swiper-slide">
@@ -100,7 +103,8 @@
         </div> -->
     </section>
 
-    <div class="" style="background-color: #fff;">
+    <div class="" style="background-color: #000;">
+
         <div class="footer_social">
             <div>
                 <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
@@ -110,6 +114,7 @@
                 <img src="/assest/OLIVE/instagram.png" />
                 <img src="/assest/OLIVE/twitter.png" />
             </div>
+
         </div>
     </div>
     <%- include("./partials/footer.ejs") %>
