--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,12 +44,12 @@
             <div class="icon">
                 <div class="user">
                     <a href="/profile">
-                        <img class="imgicon" src="/assest/OLIVE/usergold.png" alt="" srcset="">
+                        <img class="" src="/assest/OLIVE/usergold.png" alt="" srcset="">
                     </a>
                 </div>
                 <a href="/dashboard">
                     <div class="home">
-                        <img src="/assest/OLIVE/goldHomeIcon.png" alt="" srcset="">
+                        <img src="/assest/OLIVE/dashboard.png" alt="" srcset="">
                     </div>
                 </a>
             </div>
