--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,7 +61,8 @@
             <br>
 
         </section>
-        <div class="" style="background-color: #fff;">
+        <div class="" style="background-color: #000;">
+
             <div class="footer_social">
                 <div>
                     <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
@@ -72,6 +73,7 @@
                     <img src="/assest/OLIVE/twitter.png" />
                 </div>
             </div>
+            <div class="bt"></div>
         </div>
 
         <script>
