--- a/views/regSuccess.ejs
+++ b/views/regSuccess.ejs
@@ -62,7 +62,8 @@
     <br>
     <section>
 
-        <div class="" style="background-color: #fff;">
+        <div class="footer" style="background-color: #000;">
+
             <div class="footer_social">
                 <div>
                     <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
@@ -74,6 +75,7 @@
                 </div>
             </div>
         </div>
+
     </section>
     <!-- 
     <form>
