--- a/views/success.ejs
+++ b/views/success.ejs
@@ -51,7 +51,8 @@
 
     </section>
 
-    <div class="" style="background-color: #fff;">
+    <div class="" style="background-color: #000;">
+
         <div class="footer_social">
             <div>
                 <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
@@ -62,6 +63,7 @@
                 <img src="/assest/OLIVE/twitter.png" />
             </div>
         </div>
+
     </div>
     <!-- 
     <form>
