--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -90,6 +90,7 @@
                                         <% if (dateSelection) { %>
                                             <p class="timedetails">Your audition link will be available in</p>
                                             <p style="color: goldenrod;" class="timeLeft">
+                                                <img src="/assest/OLIVE/tik.png" />
                                             </p>
                                             <p class="dbDate">
                                             </p>
