--- a/views/login.ejs
+++ b/views/login.ejs
@@ -95,7 +95,7 @@
                 <div class="number">
                     <!-- <label for="number">Please enter your phone number</label> -->
                     <!-- <input type="number" name="username" required> -->
-                    <input id="phone" name="username" type="tel" placeholder="enter your phone number">
+                    <input id="phone" name="username" type="tel" placeholder="Enter your phone number">
 
                     <img src="/assest/OLIVE/Line 2.png" alt="">
                 </div>
