--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -55,7 +55,7 @@
                             <div class="bo " id="myaudition" style="position: relative; cursor: pointer;">
 
                                 <img width="147px" height="147px"
-                                    style="background-color: transparent; border: .5px solid #FFCA00;border-radius: 12px;max-width: 148px; max-height: 148px;"
+                                    style="background-color: transparent; border: 1.5px solid #FFCA00;border-radius: 12px;max-width: 148px; max-height: 148px;"
                                     src=<%=element.auditionLogo %>>
 
                                 <h6 class="content_header audition " data-id="<%=element._id %>"
@@ -82,7 +82,7 @@
                     <div class="bo all" id="all" style="position: relative; cursor: pointer;">
 
                         <img width="147px" height="147px"
-                            style="border: 1.1px solid #FFCA00;border-radius: 15px;box-sizing: border-box; max-width: 147px; max-height: 148px;min-width: 148px; min-height: 147px;"
+                            style="border: 1.5px solid #FFCA00;border-radius: 15px;box-sizing: border-box; max-width: 147px; max-height: 148px;min-width: 148px; min-height: 147px;"
                             src=<%=element.auditionLogo %>>
 
                         <h6 class="content_header audition availableAudition" data-id="<%=element._id %>"
@@ -127,7 +127,7 @@
     </section>
 
 
-    <div class="" style="background-color: rgb(0, 0, 0);">
+    <div class="" style="background-color: rgb(16, 16, 16);">
         <div class="footer_social">
             <div>
                 <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
@@ -217,7 +217,7 @@
                                     },
                                     customizations: {
                                         title: "GhenGhen Live",
-                                        description: "GhenGhen Live tution for <%=auditions.auditionName%>",
+                                        description: "GhenGhen tution for <%=auditions.auditionName%>",
                                         logo: logo,
                                     },
                                 });
