--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -327,7 +327,7 @@
                             formed.style.display = "none"
                         } else {
                             submitBtn.innerHTML = "REGISTER";
-                            alert(data.error)
+                            err.innerHTML = data.error
                         }
 
 
