--- a/views/login.ejs
+++ b/views/login.ejs
@@ -88,7 +88,7 @@
                 <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
             </div> -->
 
-            <b style="margin-top: 10px;" class="content_header register_link_header">SIGN IN TO <span
+            <b style="" class="content_header register_link_header">SIGN IN TO <span
                     style="color: goldenrod;">GhenGhen</span> </b>
             <form style="margin-bottom: 20px;" class="register_link" id="form">
                 <div class="err" style="color:goldenrod;text-align: center;"></div>
