--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -1,6 +1,6 @@
 <%- include ("./partials/header.ejs") %>
     <section class="largeImg">
-        <img height="422px" width="100%" src="<%=auditions.auditionLogo%>" alt="" srcset="">
+        <img height="200px" width="100%" src="<%=auditions.auditionLogo%>" alt="" srcset="">
 
         <!--  -->
     </section>
@@ -14,7 +14,7 @@
                 <div class="auditionBox">
                     <% if (auditions) { %>
 
-                        <div class="abox">
+                        <div class="abox" style="grid-gap: 18px;">
                             <p class="err"></p>
                             <div class="abox_content">
                                 <img width="5px" src="/assest/OLIVE/detailsicon.png" style="margin-left: 5px;" />
