--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -46,6 +46,10 @@ body{
    font-weight: 900;
 
 }
+b{
+    height: 5px;
+}
+
 
 /* style input[datetime-local]*/
 input[type=datetime-local]::-webkit-inner-spin-button {
@@ -66,6 +70,7 @@ input[type=datetime-local]::-webkit-inner-spin-button {
    
 
 }
+
 .numberform{
     max-width: 414px;
     color: #ddd;
@@ -409,6 +414,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+   
 
 }
 
